My header upsated

--- a/src/public/template.html
+++ b/src/public/template.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-
-    <link rel="stylesheet" type='text/css' media='all' href='./scripts/bootstrap.min.css' crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='all' href='./scripts/index.css' />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="./scripts/favicon.ico">
 
